# SharpCoreDB

./: .dockerignore  .gitignore  NuGet.Config  NuGet.README.md  README.md  SharpCoreDB.sln  commit-server-phase1.bat  edit_sln.ps1  tmp_index_classes.txt  tmp_src_arrow_empty.txt  tmp_src_comment_markers.txt  tmp_src_default_stub_scan.txt  tmp_src_notimplemented.txt  tmp_src_placeholder_broad.txt  tmp_src_stub_scan.txt  tmp_src_todo_fixme.txt  tmp_src_todo_fixme_word.txt
.github/: CI_STATUS.md  copilot-instructions.md
.github/workflows/: ci.yml  dependency-submission.yml
Examples/: README.md
docs/: CHANGELOG.md  EVENT_SOURCING_100_PERCENT_COMPLETE.md  EVENT_SOURCING_DEMO_COMPLETE.md  FEATURE_MATRIX.md  INDEX.md  OPEN_POINTS_SECOND_PASS_REPORT_2026-03-11.md  OPEN_POINTS_VERIFICATION_REPORT_2026-03-11.md  PHASE11_READY_STATUS.md  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST_V1.5.0.md  RELEASE_READY_V1.5.0.md  TODO_AUDIT_2026-03.md  WEEK3_PROGRESS_SUMMARY.md  WEEK4_5_COMPLETE_SUMMARY.md
docs/api/: SharpCoreDB.Graph.Advanced.API.md
docs/benchmarks/: BENCHMARK_METHOD.md  BENCHMARK_SCENARIOS_FINAL.md  ISSUE_56_ACCEPTANCE_CRITERIA.md  SHARPCOREDB_COMPARATIVE_BENCHMARKS.md  SHARPCOREDB_VS_ZVEC_COMPARISON.md
docs/cqrs/: QUICKSTART.md  README.md
docs/examples/: graphrag-advanced-patterns.md  graphrag-basic-usage.md  integration-openai.md
docs/features/: advanced-graphrag.md  graphrag-enhancement.md
docs/graphrag/: 00_START_HERE.md  GRAPHRAG_PROPOSAL_ANALYSIS.md
docs/migration/: FLUENTMIGRATOR_EMBEDDED_MODE_v1.6.0.md  FLUENTMIGRATOR_SERVER_MODE_v1.6.0.md  README.md
docs/performance/: graphrag-performance-tuning.md
docs/proposals/: ADR_FLUENTMIGRATOR_PACKAGE_PLACEMENT_v1.6.0.md  README.md
docs/scdb/: README_INDEX.md
docs/server/: ALL_WEEKS_SUBISSUES_55_56.md  BINARY_PROTOCOL_SPEC.md  CLIENT_GUIDE.md  COMBINED_ROADMAP_V1.5_V1.6.md  CONFIGURATION_SCHEMA.md  EVENT_SOURCING_RFC.md  EVENT_STREAM_MODEL_FINAL.md  HTTP_REST_API.md  INSTALLATION.md  ISSUES_55_56_EXECUTION_PLAN.md  ISSUE_55_ACCEPTANCE_CRITERIA.md  PACKAGE_UPDATES_ASPIRE.md  PHASE11_IMPLEMENTATION_PLAN.md  PHASE12_IMPLEMENTATION_PLAN.md  PHASE12_WEEK1_FOUNDATION_COMPLETE.md  PHASE12_WEEK2_TESTING_COMPLETE.md  PHASE12_WEEK3_SQL_INTEGRATION_COMPLETE.md  PHASE12_WEEK4_GRAPHRAG_ENHANCEMENT.md  PHASE12_WEEK5_DOCUMENTATION_RELEASE.md  PHASE1_WEEK1_COMPLETE.md  QUICKSTART.md  README.md  REST_API.md  SECURITY.md  SERVER_MODE_DOCKER_TEST_PLAN.md  SYSTEM_DATABASES_SECURITY.md  WEEK1_SUBISSUES_55_56.md
docs/storage/: METADATA_IMPROVEMENTS_V1.5.0.md  QUICK_REFERENCE_V1.5.0.md  STORAGE_MODE_GUIDANCE.md
installers/linux/: install.sh  sharpcoredb.service
scripts/: build-nuget.ps1  build-server.bat  commit-grpc.bat  docs-cleanup.bat  docs-cleanup.ps1  docs-cleanup.sh  docs-commit.bat  test-server-docker.ps1
src/SharpCoreDBServerScriptClients/python/pysharpcoredb/: CHANGELOG.md  README.md  publish.sh  pyproject.toml
src/SharpCoreDBServerScriptClients/python/pysharpcoredb/.github/workflows/: publish.yml
src/SharpCoreDBServerScriptClients/python/pysharpcoredb/examples/: README.md  basic_example.py
src/SharpCoreDBServerScriptClients/python/pysharpcoredb/src/pysharpcoredb/: __init__.py  grpc_client.py
src/SharpCoreDBServerScriptClients/python/pysharpcoredb/tests/: conftest.py  test_pool.py
(+401 files in other folders)
